<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. KollHong. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityBtConnect"
        tools:layout_editor_absoluteY="81dp"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/linearLayout"
            >

        <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/switch1"
                android:padding="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textOff="@string/turn_on_bluetooth"
                android:textOn="@string/turn_off_bluetooth"
                android:text="@string/connect_bluetooth"
                android:layout_weight="4"/>

        <Button
                android:text="@string/search"
                android:layout_height="match_parent"
                android:id="@+id/search"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp"
                app:layout_constraintTop_toBottomOf="@+id/switch1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:onClick="onSearchClicked"/>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/constraint">

        <android.support.constraint.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintBottom_toBottomOf="@id/constraint"
                app:layout_constraintTop_toTopOf="@id/constraint"/>
        <TextView
                android:id="@+id/title_paired_devices"
                android:layout_height="wrap_content"
                android:text="@string/title_paired_devices"
                android:background="#666"
                android:textColor="#fff"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <ListView
                android:id="@+id/paired_devices"
                android:layout_width="0dp"
                android:stackFromBottom="true"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_paired_devices"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.0">

        </ListView>

        <TextView
                android:id="@+id/title_new_devices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_other_devices"
                android:background="#666"
                android:textColor="#fff"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline" app:layout_constraintHorizontal_bias="0.0"
        />
        <ListView
                android:id="@+id/new_devices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:stackFromBottom="true"
                android:layout_weight="2"
                app:layout_constraintTop_toBottomOf="@+id/title_new_devices" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>