<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. KollHong. All Rights Reserved.
  ~ Copyright (c) 2018. KollHong. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ActivitySetting"
              android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/control"
                    android:contentDescription="SettingsImage"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/Settings"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

        </LinearLayout>

    <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConnectSwitch"
            android:text="@string/auto_coonect"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:padding="11dp"/>

    <Button
            android:text="@string/connect_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="11dp"
            android:gravity="start|center_vertical"
            android:onClick="onSensorConnectBtn"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"/>

    <Button
            android:text="@string/set_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="11dp"
            android:gravity="start|center_vertical"
            android:onClick="onLEDSettingsBtn"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"/>

    </LinearLayout>
